Fixed layout issues

--- a/app/scss/2-base/_base.scss
+++ b/app/scss/2-base/_base.scss
@@ -4,7 +4,7 @@ body {
 
     background: var(--lightGreyishBlue);
 
-    padding: 4.437rem 1.5rem 0;
+    padding: 4.437rem 1.5rem 1rem;
 
     display: flex;
     flex-direction: column;
@@ -14,7 +14,7 @@ body {
 
 
     @media (min-width: 40em) {
-        padding: 4.437rem 2rem;
+        padding: 4.437rem 2rem 1rem;
     }
 }   
 
